test: create test to offset
Signed-off-by: Otavio Santana <otaviopolianasantana@gmail.com>